--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ include ':dd-trace-api'
 // instrumentation:
 include ':dd-java-agent:instrumentation:akka-http-10.0'
 include ':dd-java-agent:instrumentation:apache-httpclient-4.3'
+include ':dd-java-agent:instrumentation:autotracing'
 include ':dd-java-agent:instrumentation:aws-java-sdk-1.11.0'
 include ':dd-java-agent:instrumentation:aws-java-sdk-1.11.106'
 include ':dd-java-agent:instrumentation:couchbase-2.0'
